Updated composer file

--- a/composer.json
+++ b/composer.json
@@ -4,5 +4,8 @@
     "require": {
         "php": "^7.2",
         "another-vendor/package": "1.*"
-    }
+    },
+    "license": [
+        "OSL-3.0"
+    ]
 }
